--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,19 @@ add_executable(moonshine main.cpp utils/Constants.h MoonshineApp.cpp MoonshineAp
 
 # DOWNLOAD ALL THE SUBMODULES
 find_package(Git QUIET)
-if (GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
-    #Update submodules as needed
-    option(GIT_SUBMODULE "Check submodules during build" ON)
-    if (GIT_SUBMODULE)
-        message(STATUS "Submodule update")
-        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-                RESULT_VARIABLE GIT_SUBMODULE_RESULT)
-        if (NOT GIT_SUBMODULE_RESULT EQUAL "0")
-            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMODULE_RESULT}, please checkout")
-        endif ()
-    endif ()
-endif ()
+# if (GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
+#    #Update submodules as needed
+#    option(GIT_SUBMODULE "Check submodules during build" ON)
+#    if (GIT_SUBMODULE)
+#        message(STATUS "Submodule update")
+#        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
+#                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+#                RESULT_VARIABLE GIT_SUBMODULE_RESULT)
+#        if (NOT GIT_SUBMODULE_RESULT EQUAL "0")
+#            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMODULE_RESULT}, please checkout")
+#        endif ()
+#    endif ()
+#endif ()
 
 include_directories(external/stb/)
 
