Enhanced logging with a user interface
Added UILogger, LoggerType, and LogMessage headers to enhance logging by providing an interface to interact with and visualize logs more conveniently. Modified Logger by adding log queue and log messages, implemented methods to pre-draw and draw the logs. These changes allow logging information at different levels such as debug, info, warn, error, and critical. Updated CMakeLists to include the new headers and their respective cpp files. Logger functionality was tested in MoonshineApp.cpp. This provides a more intuitive and real-time way to handle and monitor logs for debugging and tracking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,11 @@ add_executable(moonshine main.cpp editor/Settings.h utils/Constants.h MoonshineA
         editor/Node.h
         editor/EngineSystems.h
         editor/logging/Logger.h
+        editor/logging/UILogger.h
+        editor/logging/LoggerType.h
+        editor/logging/LogMessage.h
+        editor/logging/LoggerType.cpp
+        editor/logging/Logger.cpp
 )
 
 # DOWNLOAD ALL THE SUBMODULES
