Add StatisticsManager for runtime performance tracking
StatisticsManager is introduced as a part of EngineSystems to record and display runtime performance details like draw calls, vertex count and frame time. It starts monitoring when the frame starts and ends when the frame ends. Draw calls and vertex count increments get triggered during the rendering of each submesh. This enables real-time monitoring and troubleshooting of performance issues in the application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ add_executable(moonshine main.cpp editor/Settings.h utils/Constants.h MoonshineA
         editor/logging/LogMessage.h
         editor/logging/LoggerType.cpp
         editor/logging/Logger.cpp
+        editor/ui/StatisticsManager.cpp
+        editor/ui/StatisticsManager.h
 )
 
 # DOWNLOAD ALL THE SUBMODULES
