Add UI lock functionality and improve logging in networking
This commit introduces UI locking functionality to prevent multiple users from simultaneously modifying scene objects. Now, the UIManager class is included in the Server, Client, and LobbyManager classes. Additional functions to handle UI locking are added to these classes.

Server and Client classes have new `broadcast` and `send` functions respectively to support UI lock state replication across the network.

LobbyManager gains the `replicateUi` function for UI state replication and the function `isHost` to check if the current system is the host.

New UI components InputFloat3, UIManager, etc., are added to handle and display UI changes. The Engine Systems class incorporates the UIManager for global access. Functions in RequestResolver and MoonshineApp classes are modified to handle locking status during scene object modifications.

Lastly, this commit includes detailed logging for different send actions in the Client class and formats statistics displayed in the StatisticsManager class. This change will help to debug and track networking events more effectively.

The changes collectively improve the multi-user editing experience and enhance the debuggability of the system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,10 @@ add_executable(moonshine main.cpp editor/Settings.h utils/Constants.h MoonshineA
         editor/logging/Logger.cpp
         editor/ui/StatisticsManager.cpp
         editor/ui/StatisticsManager.h
+        editor/ui/net/InputFloat3.cpp
+        editor/ui/net/InputFloat3.h
+        editor/ui/net/UIManager.cpp
+        editor/ui/net/UIManager.h
 )
 
 # DOWNLOAD ALL THE SUBMODULES
