Introduce the easy profiler for performance tuning.
The changes include adding easy_profiler to the project as a git submodule, linking it in CMakeLists.txt, and integrating it into MoonshineApp.cpp to profile different sections of the main loop. Custom profiling blocks were created to target areas of interest, and profiling data is dumped to a file.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "external/spdlog"]
 	path = external/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "external/easy_profiler"]
+	path = external/easy_profiler
+	url = https://github.com/yse/easy_profiler.git
