Refactor GUI code into separate files
This commit includes refactoring of GUI-related code from MoonshineApp.cpp and MoonshineApp.h into separate files: Gui.cpp and Gui.h. The GUI setup, frame creation, and rendering have been moved into these new classes. Additionally, the Git tracking for the external package 'easy_profiler' in .idea/vcs.xml has been updated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ add_executable(${PROJECT_NAME} main.cpp editor/Settings.h utils/Constants.h Moon
         editor/ui/net/InputFloat3.h
         editor/ui/net/UIManager.cpp
         editor/ui/net/UIManager.h
+        graphics/Gui.cpp
+        graphics/Gui.h
+        graphics/Gui.h
+        graphics/Gui.cpp
 )
 
 # DOWNLOAD ALL THE SUBMODULES
