[WIP ]Refactor editor structure and implement OpenGL GUI renderer
Reformatted the structure of the engine system and updated Camera methods to use InputHandler in a clearer way. Also, introduced a new GUI Renderer using OpenGL, including utility generator functions and cleanup allowances for more effective management. Improved project configurations in .xml and CMakeLists.txt, and added new dependencies. Several classes have been updated to enhance readability and performance.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@
 *.out
 *.app
 
+#ignore dependencies
+/deps/src/
+
 # Ignore IDEA
 cmake-build-debug
 
@@ -154,3 +157,4 @@ fabric.properties
 
 # Ignore compiled shaders
 *.spv
+
